--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 									</p> 
 
 									<p style="text-align:left;">
-									Below are a few of many projects I've worked on. If you'd want to learn more about my projects or see my resume, feel free to email me.</p> 
+									Below are a few of the projects I've worked on. If you'd want to learn more about my projects or see my resume, feel free to email me.</p> 
 								</header>
 							</article>
 
